SRC/AnalyseSyntaxique/src/dtd/dtd.output
Terminals unused in grammar

   EMPTY
   ANY


Grammar

    0 $accept: main $end

    1 main: dtd

    2 dtd: dtd ATTLIST NAME att_definition CLOSE
    3    | dtd ELEMENT NAME choix_ou_sequence cardinalite CLOSE
    4    | /* empty */

    5 choix_ou_sequence: choix
    6                  | sequence

    7 choix: OPENPAR liste_choix_plus CLOSEPAR

    8 sequence: OPENPAR liste_sequence CLOSEPAR

    9 cardinalite: AST
   10            | QMARK
   11            | PLUS
   12            | /* empty */

   13 liste_choix_plus: liste_choix PIPE item

   14 liste_sequence: item
   15               | liste_sequence COMMA item

   16 item: NAME cardinalite
   17     | PCDATA cardinalite
   18     | choix_ou_sequence cardinalite

   19 liste_choix: item
   20            | liste_choix PIPE item

   21 att_definition: att_definition attribut
   22               | /* empty */

   23 attribut: NAME att_type defaut_declaration

   24 att_type: CDATA
   25         | TOKENTYPE
   26         | type_enumere

   27 type_enumere: OPENPAR liste_enum_plus CLOSEPAR

   28 liste_enum_plus: liste_enum PIPE item_enum

   29 liste_enum: item_enum
   30           | liste_enum PIPE item_enum

   31 item_enum: NAME

   32 defaut_declaration: DECLARATION
   33                   | STRING
   34                   | FIXED STRING


Terminals, with rules where they appear

$end (0) 0
error (256)
ELEMENT (258) 3
ATTLIST (259) 2
CLOSE (260) 2 3
OPENPAR (261) 7 8 27
CLOSEPAR (262) 7 8 27
COMMA (263) 15
PIPE (264) 13 20 28 30
FIXED (265) 34
EMPTY (266)
ANY (267)
PCDATA (268) 17
AST (269) 9
QMARK (270) 10
PLUS (271) 11
CDATA (272) 24
NAME (273) 2 3 16 23 31
TOKENTYPE (274) 25
DECLARATION (275) 32
STRING (276) 33 34


Nonterminals, with rules where they appear

$accept (22)
    on left: 0
main (23)
    on left: 1, on right: 0
dtd (24)
    on left: 2 3 4, on right: 1 2 3
choix_ou_sequence (25)
    on left: 5 6, on right: 3 18
choix (26)
    on left: 7, on right: 5
sequence (27)
    on left: 8, on right: 6
cardinalite (28)
    on left: 9 10 11 12, on right: 3 16 17 18
liste_choix_plus (29)
    on left: 13, on right: 7
liste_sequence (30)
    on left: 14 15, on right: 8 15
item (31)
    on left: 16 17 18, on right: 13 14 15 19 20
liste_choix (32)
    on left: 19 20, on right: 13 20
att_definition (33)
    on left: 21 22, on right: 2 21
attribut (34)
    on left: 23, on right: 21
att_type (35)
    on left: 24 25 26, on right: 23
type_enumere (36)
    on left: 27, on right: 26
liste_enum_plus (37)
    on left: 28, on right: 27
liste_enum (38)
    on left: 29 30, on right: 28 30
item_enum (39)
    on left: 31, on right: 28 29 30
defaut_declaration (40)
    on left: 32 33 34, on right: 23


state 0

    0 $accept: . main $end

    $default  reduce using rule 4 (dtd)

    main  go to state 1
    dtd   go to state 2


state 1

    0 $accept: main . $end

    $end  shift, and go to state 3


state 2

    1 main: dtd .
    2 dtd: dtd . ATTLIST NAME att_definition CLOSE
    3    | dtd . ELEMENT NAME choix_ou_sequence cardinalite CLOSE

    ELEMENT  shift, and go to state 4
    ATTLIST  shift, and go to state 5

    $default  reduce using rule 1 (main)


state 3

    0 $accept: main $end .

    $default  accept


state 4

    3 dtd: dtd ELEMENT . NAME choix_ou_sequence cardinalite CLOSE

    NAME  shift, and go to state 6


state 5

    2 dtd: dtd ATTLIST . NAME att_definition CLOSE

    NAME  shift, and go to state 7


state 6

    3 dtd: dtd ELEMENT NAME . choix_ou_sequence cardinalite CLOSE

    OPENPAR  shift, and go to state 8

    choix_ou_sequence  go to state 9
    choix              go to state 10
    sequence           go to state 11


state 7

    2 dtd: dtd ATTLIST NAME . att_definition CLOSE

    $default  reduce using rule 22 (att_definition)

    att_definition  go to state 12


state 8

    7 choix: OPENPAR . liste_choix_plus CLOSEPAR
    8 sequence: OPENPAR . liste_sequence CLOSEPAR

    OPENPAR  shift, and go to state 8
    PCDATA   shift, and go to state 13
    NAME     shift, and go to state 14

    choix_ou_sequence  go to state 15
    choix              go to state 10
    sequence           go to state 11
    liste_choix_plus   go to state 16
    liste_sequence     go to state 17
    item               go to state 18
    liste_choix        go to state 19


state 9

    3 dtd: dtd ELEMENT NAME choix_ou_sequence . cardinalite CLOSE

    AST    shift, and go to state 20
    QMARK  shift, and go to state 21
    PLUS   shift, and go to state 22

    $default  reduce using rule 12 (cardinalite)

    cardinalite  go to state 23


state 10

    5 choix_ou_sequence: choix .

    $default  reduce using rule 5 (choix_ou_sequence)


state 11

    6 choix_ou_sequence: sequence .

    $default  reduce using rule 6 (choix_ou_sequence)


state 12

    2 dtd: dtd ATTLIST NAME att_definition . CLOSE
   21 att_definition: att_definition . attribut

    CLOSE  shift, and go to state 24
    NAME   shift, and go to state 25

    attribut  go to state 26


state 13

   17 item: PCDATA . cardinalite

    AST    shift, and go to state 20
    QMARK  shift, and go to state 21
    PLUS   shift, and go to state 22

    $default  reduce using rule 12 (cardinalite)

    cardinalite  go to state 27


state 14

   16 item: NAME . cardinalite

    AST    shift, and go to state 20
    QMARK  shift, and go to state 21
    PLUS   shift, and go to state 22

    $default  reduce using rule 12 (cardinalite)

    cardinalite  go to state 28


state 15

   18 item: choix_ou_sequence . cardinalite

    AST    shift, and go to state 20
    QMARK  shift, and go to state 21
    PLUS   shift, and go to state 22

    $default  reduce using rule 12 (cardinalite)

    cardinalite  go to state 29


state 16

    7 choix: OPENPAR liste_choix_plus . CLOSEPAR

    CLOSEPAR  shift, and go to state 30


state 17

    8 sequence: OPENPAR liste_sequence . CLOSEPAR
   15 liste_sequence: liste_sequence . COMMA item

    CLOSEPAR  shift, and go to state 31
    COMMA     shift, and go to state 32


state 18

   14 liste_sequence: item .
   19 liste_choix: item .

    PIPE      reduce using rule 19 (liste_choix)
    $default  reduce using rule 14 (liste_sequence)


state 19

   13 liste_choix_plus: liste_choix . PIPE item
   20 liste_choix: liste_choix . PIPE item

    PIPE  shift, and go to state 33


state 20

    9 cardinalite: AST .

    $default  reduce using rule 9 (cardinalite)


state 21

   10 cardinalite: QMARK .

    $default  reduce using rule 10 (cardinalite)


state 22

   11 cardinalite: PLUS .

    $default  reduce using rule 11 (cardinalite)


state 23

    3 dtd: dtd ELEMENT NAME choix_ou_sequence cardinalite . CLOSE

    CLOSE  shift, and go to state 34


state 24

    2 dtd: dtd ATTLIST NAME att_definition CLOSE .

    $default  reduce using rule 2 (dtd)


state 25

   23 attribut: NAME . att_type defaut_declaration

    OPENPAR    shift, and go to state 35
    CDATA      shift, and go to state 36
    TOKENTYPE  shift, and go to state 37

    att_type      go to state 38
    type_enumere  go to state 39


state 26

   21 att_definition: att_definition attribut .

    $default  reduce using rule 21 (att_definition)


state 27

   17 item: PCDATA cardinalite .

    $default  reduce using rule 17 (item)


state 28

   16 item: NAME cardinalite .

    $default  reduce using rule 16 (item)


state 29

   18 item: choix_ou_sequence cardinalite .

    $default  reduce using rule 18 (item)


state 30

    7 choix: OPENPAR liste_choix_plus CLOSEPAR .

    $default  reduce using rule 7 (choix)


state 31

    8 sequence: OPENPAR liste_sequence CLOSEPAR .

    $default  reduce using rule 8 (sequence)


state 32

   15 liste_sequence: liste_sequence COMMA . item

    OPENPAR  shift, and go to state 8
    PCDATA   shift, and go to state 13
    NAME     shift, and go to state 14

    choix_ou_sequence  go to state 15
    choix              go to state 10
    sequence           go to state 11
    item               go to state 40


state 33

   13 liste_choix_plus: liste_choix PIPE . item
   20 liste_choix: liste_choix PIPE . item

    OPENPAR  shift, and go to state 8
    PCDATA   shift, and go to state 13
    NAME     shift, and go to state 14

    choix_ou_sequence  go to state 15
    choix              go to state 10
    sequence           go to state 11
    item               go to state 41


state 34

    3 dtd: dtd ELEMENT NAME choix_ou_sequence cardinalite CLOSE .

    $default  reduce using rule 3 (dtd)


state 35

   27 type_enumere: OPENPAR . liste_enum_plus CLOSEPAR

    NAME  shift, and go to state 42

    liste_enum_plus  go to state 43
    liste_enum       go to state 44
    item_enum        go to state 45


state 36

   24 att_type: CDATA .

    $default  reduce using rule 24 (att_type)


state 37

   25 att_type: TOKENTYPE .

    $default  reduce using rule 25 (att_type)


state 38

   23 attribut: NAME att_type . defaut_declaration

    FIXED        shift, and go to state 46
    DECLARATION  shift, and go to state 47
    STRING       shift, and go to state 48

    defaut_declaration  go to state 49


state 39

   26 att_type: type_enumere .

    $default  reduce using rule 26 (att_type)


state 40

   15 liste_sequence: liste_sequence COMMA item .

    $default  reduce using rule 15 (liste_sequence)


state 41

   13 liste_choix_plus: liste_choix PIPE item .
   20 liste_choix: liste_choix PIPE item .

    PIPE      reduce using rule 20 (liste_choix)
    $default  reduce using rule 13 (liste_choix_plus)


state 42

   31 item_enum: NAME .

    $default  reduce using rule 31 (item_enum)


state 43

   27 type_enumere: OPENPAR liste_enum_plus . CLOSEPAR

    CLOSEPAR  shift, and go to state 50


state 44

   28 liste_enum_plus: liste_enum . PIPE item_enum
   30 liste_enum: liste_enum . PIPE item_enum

    PIPE  shift, and go to state 51


state 45

   29 liste_enum: item_enum .

    $default  reduce using rule 29 (liste_enum)


state 46

   34 defaut_declaration: FIXED . STRING

    STRING  shift, and go to state 52


state 47

   32 defaut_declaration: DECLARATION .

    $default  reduce using rule 32 (defaut_declaration)


state 48

   33 defaut_declaration: STRING .

    $default  reduce using rule 33 (defaut_declaration)


state 49

   23 attribut: NAME att_type defaut_declaration .

    $default  reduce using rule 23 (attribut)


state 50

   27 type_enumere: OPENPAR liste_enum_plus CLOSEPAR .

    $default  reduce using rule 27 (type_enumere)


state 51

   28 liste_enum_plus: liste_enum PIPE . item_enum
   30 liste_enum: liste_enum PIPE . item_enum

    NAME  shift, and go to state 42

    item_enum  go to state 53


state 52

   34 defaut_declaration: FIXED STRING .

    $default  reduce using rule 34 (defaut_declaration)


state 53

   28 liste_enum_plus: liste_enum PIPE item_enum .
   30 liste_enum: liste_enum PIPE item_enum .

    PIPE      reduce using rule 30 (liste_enum)
    $default  reduce using rule 28 (liste_enum_plus)
